[gd_scene load_steps=8 format=3 uid="uid://byl38tmdgpg02"]

[ext_resource type="Script" path="res://Scripts/DialogueBox.gd" id="1_gr6ob"]
[ext_resource type="Texture2D" uid="uid://c4lu4yf2e0qmn" path="res://Assets/Potraits/unknown.png" id="2_mhrjb"]
[ext_resource type="FontFile" uid="uid://bh7k7nt6ionqq" path="res://Assets/Fonts/bedstead.otf" id="3_jlwge"]
[ext_resource type="Texture2D" uid="uid://dorguqtscht0i" path="res://Assets/pointer.png" id="4_3n20s"]

[sub_resource type="Animation" id="Animation_78uyh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_tdgjl"]
resource_name = "playing"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k3vep"]
_data = {
"RESET": SubResource("Animation_78uyh"),
"playing": SubResource("Animation_tdgjl")
}

[node name="DialogueBox" type="ColorRect"]
visible = false
offset_right = 512.0
offset_bottom = 128.0
color = Color(0.156863, 0.164706, 0.211765, 1)
script = ExtResource("1_gr6ob")
wpm = 250
dialoguesLocation = "res://Resources/Dialogues"

[node name="Potrait" type="Sprite2D" parent="."]
scale = Vector2(8, 8)
texture = ExtResource("2_mhrjb")
centered = false

[node name="Name" type="Label" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -374.0
offset_bottom = 30.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.545098, 0.913725, 0.972549, 1)
theme_override_fonts/font = ExtResource("3_jlwge")
text = "Name Goes Here"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true
uppercase = true

[node name="Text" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -374.0
offset_top = -98.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_jlwge")
theme_override_font_sizes/font_size = 16
text = "Put you text here..."
autowrap_mode = 3
visible_characters = 0
visible_ratio = 0.0

[node name="Pointer" type="Sprite2D" parent="."]
position = Vector2(494, 112)
texture = ExtResource("4_3n20s")
centered = false
hframes = 8
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pointer"]
autoplay = "playing"
libraries = {
"": SubResource("AnimationLibrary_k3vep")
}

[connection signal="dialogue_completed" from="." to="." method="_on_dialogue_completed"]
[connection signal="dialogue_ended" from="." to="." method="_on_dialogue_ended"]
[connection signal="dialogue_skipped" from="." to="." method="_on_dialogue_skipped"]
[connection signal="dialogue_started" from="." to="." method="_on_dialogue_started"]
